# nyctaxi_project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  OPERATIONS.md  requirements.txt
airflow/dags/: nyc_taxi_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: surrogate_key.sql
dbt/models/marts/: dim_vendor.sql  dim_zone.sql  exposures.yml  fct_fare_anomalies.sql  fct_monthly_metrics.sql  fct_taxi_trips.sql  fct_zone_hourly_metrics.sql  ops_alerts.sql  ops_monthly_source_reconciliation.sql  ops_pipeline_monitoring.sql  schema.yml
dbt/models/staging/: schema.yml  stg_batch_runs.sql  stg_taxi_trips.sql  stg_taxi_zones.sql
dbt/tests/: test_batch_run_accounting.sql  test_fct_taxi_trips_unique_grain.sql  test_loaded_reconciliation_zero.sql
infra/postgres-init/: 00-create-databases.sql
ingest/src/nyctaxi/: __init__.py  cli.py  config.py  models.py  pipeline.py  warehouse.py
ingest/tests/: test_normalize.py
metabase/: DASHBOARDS.md  SETUP.md  dashboard_queries.sql
